{
  "version": 4,
  "terraform_version": "1.6.6",
  "serial": 175,
  "lineage": "a24370a9-2ec2-28ff-73cd-b8d950bcebf5",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "tf-ans-demo-nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "vm1",
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/551d4f9d-a651-4011-a550-f4cdcb4f653a/resourceGroups/tf-ans-demo-rg/providers/Microsoft.Network/networkInterfaces/ansible-controller-vm-nic",
            "internal_domain_name_suffix": "e11cjxdmu0jeflzukobw25otcc.rx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.1.1.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/551d4f9d-a651-4011-a550-f4cdcb4f653a/resourceGroups/tf-ans-demo-rg/providers/Microsoft.Network/publicIPAddresses/ansible-controller-vm-pub-ip",
                "subnet_id": "/subscriptions/551d4f9d-a651-4011-a550-f4cdcb4f653a/resourceGroups/tf-ans-demo-rg/providers/Microsoft.Network/virtualNetworks/tf-ans-demo-vnet/subnets/tf-ans-demo-subnet1"
              }
            ],
            "location": "centralindia",
            "mac_address": "60-45-BD-73-39-C8",
            "name": "ansible-controller-vm-nic",
            "private_ip_address": "10.1.1.4",
            "private_ip_addresses": [
              "10.1.1.4"
            ],
            "resource_group_name": "tf-ans-demo-rg",
            "tags": {
              "createdby": "suren",
              "environment": "NPRD"
            },
            "virtual_machine_id": "/subscriptions/551d4f9d-a651-4011-a550-f4cdcb4f653a/resourceGroups/tf-ans-demo-rg/providers/Microsoft.Compute/virtualMachines/ansible-controller-vm"
          },
          "dependencies": [
            "azurerm_public_ip.tf-ans-demo-pub-ip",
            "azurerm_resource_group.tf-ans-demo-rg",
            "azurerm_subnet.tf-ans-demo-subnet1",
            "azurerm_virtual_network.tf-ans-demo-vnet"
          ]
        },
        {
          "index_key": "vm2",
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/551d4f9d-a651-4011-a550-f4cdcb4f653a/resourceGroups/tf-ans-demo-rg/providers/Microsoft.Network/networkInterfaces/ansible-client-vm1-nic",
            "internal_domain_name_suffix": "e11cjxdmu0jeflzukobw25otcc.rx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.1.1.5",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/551d4f9d-a651-4011-a550-f4cdcb4f653a/resourceGroups/tf-ans-demo-rg/providers/Microsoft.Network/publicIPAddresses/ansible-client-vm1-pub-ip",
                "subnet_id": "/subscriptions/551d4f9d-a651-4011-a550-f4cdcb4f653a/resourceGroups/tf-ans-demo-rg/providers/Microsoft.Network/virtualNetworks/tf-ans-demo-vnet/subnets/tf-ans-demo-subnet1"
              }
            ],
            "location": "centralindia",
            "name": "ansible-client-vm1-nic",
            "private_ip_address": "10.1.1.5",
            "private_ip_addresses": [
              "10.1.1.5"
            ],
            "resource_group_name": "tf-ans-demo-rg",
            "tags": {
              "createdby": "suren",
              "environment": "NPRD"
            }
          },
          "dependencies": [
            "azurerm_public_ip.tf-ans-demo-pub-ip",
            "azurerm_resource_group.tf-ans-demo-rg",
            "azurerm_subnet.tf-ans-demo-subnet1",
            "azurerm_virtual_network.tf-ans-demo-vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "tf-ans-demo-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/551d4f9d-a651-4011-a550-f4cdcb4f653a/resourceGroups/tf-ans-demo-rg/providers/Microsoft.Network/networkSecurityGroups/tf-ans-demo-sg",
            "location": "centralindia",
            "name": "tf-ans-demo-sg",
            "resource_group_name": "tf-ans-demo-rg",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "tf-ans-demo-rule",
                "priority": 100,
                "protocol": "*",
                "source_address_prefix": "49.249.8.118/32",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {
              "createdby": "suren",
              "environment": "NPRD"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.tf-ans-demo-rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "tf-ans-demo-rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "*",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/551d4f9d-a651-4011-a550-f4cdcb4f653a/resourceGroups/tf-ans-demo-rg/providers/Microsoft.Network/networkSecurityGroups/tf-ans-demo-sg/securityRules/tf-ans-demo-rule",
            "name": "tf-ans-demo-rule",
            "network_security_group_name": "tf-ans-demo-sg",
            "priority": 100,
            "protocol": "*",
            "resource_group_name": "tf-ans-demo-rg",
            "source_address_prefix": "49.249.8.118/32",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.tf-ans-demo-sg",
            "azurerm_resource_group.tf-ans-demo-rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "tf-ans-demo-pub-ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "vm1",
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/551d4f9d-a651-4011-a550-f4cdcb4f653a/resourceGroups/tf-ans-demo-rg/providers/Microsoft.Network/publicIPAddresses/ansible-controller-vm-pub-ip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "4.247.165.222",
            "ip_version": "IPv4",
            "location": "centralindia",
            "name": "ansible-controller-vm-pub-ip",
            "resource_group_name": "tf-ans-demo-rg",
            "sku": "Basic",
            "sku_tier": "Regional",
            "tags": {
              "createdby": "suren",
              "environment": "NPRD"
            }
          },
          "dependencies": [
            "azurerm_resource_group.tf-ans-demo-rg"
          ]
        },
        {
          "index_key": "vm2",
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/551d4f9d-a651-4011-a550-f4cdcb4f653a/resourceGroups/tf-ans-demo-rg/providers/Microsoft.Network/publicIPAddresses/ansible-client-vm1-pub-ip",
            "idle_timeout_in_minutes": 4,
            "ip_version": "IPv4",
            "location": "centralindia",
            "name": "ansible-client-vm1-pub-ip",
            "resource_group_name": "tf-ans-demo-rg",
            "sku": "Basic",
            "sku_tier": "Regional",
            "tags": {
              "createdby": "suren",
              "environment": "NPRD"
            }
          },
          "dependencies": [
            "azurerm_resource_group.tf-ans-demo-rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "tf-ans-demo-subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.1.1.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/551d4f9d-a651-4011-a550-f4cdcb4f653a/resourceGroups/tf-ans-demo-rg/providers/Microsoft.Network/virtualNetworks/tf-ans-demo-vnet/subnets/tf-ans-demo-subnet1",
            "name": "tf-ans-demo-subnet1",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "tf-ans-demo-rg",
            "virtual_network_name": "tf-ans-demo-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.tf-ans-demo-rg",
            "azurerm_virtual_network.tf-ans-demo-vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "tf-ans-demo-sg-associate",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/551d4f9d-a651-4011-a550-f4cdcb4f653a/resourceGroups/tf-ans-demo-rg/providers/Microsoft.Network/virtualNetworks/tf-ans-demo-vnet/subnets/tf-ans-demo-subnet1",
            "network_security_group_id": "/subscriptions/551d4f9d-a651-4011-a550-f4cdcb4f653a/resourceGroups/tf-ans-demo-rg/providers/Microsoft.Network/networkSecurityGroups/tf-ans-demo-sg",
            "subnet_id": "/subscriptions/551d4f9d-a651-4011-a550-f4cdcb4f653a/resourceGroups/tf-ans-demo-rg/providers/Microsoft.Network/virtualNetworks/tf-ans-demo-vnet/subnets/tf-ans-demo-subnet1"
          },
          "dependencies": [
            "azurerm_network_security_group.tf-ans-demo-sg",
            "azurerm_resource_group.tf-ans-demo-rg",
            "azurerm_subnet.tf-ans-demo-subnet1",
            "azurerm_virtual_network.tf-ans-demo-vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "tf-ans-demo-vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.1.1.0/24"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "dc24f626-a66c-4292-af34-53836e7dd312",
            "id": "/subscriptions/551d4f9d-a651-4011-a550-f4cdcb4f653a/resourceGroups/tf-ans-demo-rg/providers/Microsoft.Network/virtualNetworks/tf-ans-demo-vnet",
            "location": "centralindia",
            "name": "tf-ans-demo-vnet",
            "resource_group_name": "tf-ans-demo-rg",
            "subnet": [
              {
                "address_prefix": "10.1.1.0/24",
                "id": "/subscriptions/551d4f9d-a651-4011-a550-f4cdcb4f653a/resourceGroups/tf-ans-demo-rg/providers/Microsoft.Network/virtualNetworks/tf-ans-demo-vnet/subnets/tf-ans-demo-subnet1",
                "name": "tf-ans-demo-subnet1",
                "security_group": "/subscriptions/551d4f9d-a651-4011-a550-f4cdcb4f653a/resourceGroups/tf-ans-demo-rg/providers/Microsoft.Network/networkSecurityGroups/tf-ans-demo-sg"
              }
            ],
            "tags": {
              "createdby": "suren",
              "environment": "NPRD"
            }
          },
          "dependencies": [
            "azurerm_resource_group.tf-ans-demo-rg"
          ]
        }
      ]
    }
  ]
}